@@ -1,10 +1,10 @@
 {
    "abstract" : "similarity measures for sets",
    "author" : [
-      "Helmut Wollmersdorfer, <helmut.wollmersdorfer@gmail.com>"
+      "Helmut Wollmersdorfer, <helmut@wollmersdorfer.at>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 5.034, Dist::Milla version v1.0.14, CPAN::Meta::Converter version 2.150005",
+   "generated_by" : "Dist::Milla version v1.0.20, Dist::Zilla version 6.008, CPAN::Meta::Converter version 2.150005",
    "license" : [
       "perl_5"
    ],
@@ -15,12 +15,12 @@
    "name" : "Set-Similarity",
    "no_index" : {
       "directory" : [
-         "t",
-         "xt",
+         "eg",
+         "examples",
          "inc",
          "share",
-         "eg",
-         "examples"
+         "t",
+         "xt"
       ]
    },
    "prereqs" : {
@@ -31,7 +31,7 @@
       },
       "develop" : {
          "requires" : {
-            "Dist::Milla" : "v1.0.14",
+            "Dist::Milla" : "v1.0.20",
             "Test::Pod" : "1.41"
          }
       },
@@ -49,6 +49,28 @@
          }
       }
    },
+   "provides" : {
+      "Set::Similarity" : {
+         "file" : "lib/Set/Similarity.pm",
+         "version" : "0.026"
+      },
+      "Set::Similarity::Cosine" : {
+         "file" : "lib/Set/Similarity/Cosine.pm",
+         "version" : "0.026"
+      },
+      "Set::Similarity::Dice" : {
+         "file" : "lib/Set/Similarity/Dice.pm",
+         "version" : "0.026"
+      },
+      "Set::Similarity::Jaccard" : {
+         "file" : "lib/Set/Similarity/Jaccard.pm",
+         "version" : "0.026"
+      },
+      "Set::Similarity::Overlap" : {
+         "file" : "lib/Set/Similarity/Overlap.pm",
+         "version" : "0.026"
+      }
+   },
    "release_status" : "stable",
    "resources" : {
       "bugtracker" : {
@@ -64,9 +86,9 @@
    "version" : "0.026",
    "x_contributors" : [
       "helmut <helmut@acerone.woll.internal>",
-      "Helmut Wollmersdorfer <helmut@wollmersdorfer.at>",
-      "Helmut Wollmersdorfer <helmut.wollmersdorfer@fixpunkt.de>",
-      "wollmers <helmut@wollmersdorfer.at>"
-   ]
+      "Helmut Wollmersdorfer <helmut.wollmersdorfer@fixpunkt.de>"
+   ],
+   "x_serialization_backend" : "Cpanel::JSON::XS version 4.15",
+   "x_static_install" : 1
 }
 
