@@ -1,1 +1,2 @@
 [@Milla]
+[MetaProvides::Package]
